--- a/css/construction.css
+++ b/css/construction.css
@@ -2934,7 +2934,7 @@ em.state-invalid {
     .main-header .top-header.mega-menus .mini-menu {
       background: #fff; }
     .main-header .top-header.mega-menus .i-list.i-list-i-block.i-list-i-block-sm > li a {
-      color: #646464;
+      color: #c2c1c1;
       font-weight: 500; }
       .main-header .top-header.mega-menus .i-list.i-list-i-block.i-list-i-block-sm > li a:hover {
         color: #f57f17; }
